# OmniPresenceAI-Backend

./: .gitignore  AGENT_CONTEXT.md  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routers/: audios.py  auth.py  avatars.py  runs.py  scripts.py
app/core/: config.py  database.py
app/schemas/: audio.py  avatar.py  run.py  script.py  user.py
app/services/: audio_service.py  auth_service.py  avatar_service.py  azure_service.py  run_service.py  script_service.py  tts_service.py
