[project]
name = "omnipresenceai-backend"
version = "0.1.0"
description = "Backend for OmniPresenceAI"
authors = [
    {name = "OmniPresenceTeam"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "bcrypt (==4.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
